--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "httpx[http2]>=0.28.1",
+    "pandas>=2.3.3",
+    "pyarrow>=23.0.0",
+    "pyarrow-stubs>=20.0.0.20251215",
     "redis>=7.1.0",
     "stamina>=25.2.0",
 ]
